<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:orientation="vertical"
    tools:context=".NewReminder">


    <EditText
        android:id="@+id/title"
        android:layout_width="348dp"
        android:layout_height="65dp"
        android:layout_gravity="center"
        android:layout_marginTop="0dp"
        android:gravity="center"
        android:hint="New Reminder" />

    <EditText
        android:id="@+id/notes"
        android:layout_width="354dp"
        android:layout_height="125dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal|center_vertical"
        android:hint="Notes" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="147dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Set Time: " />

        <TextView
            android:id="@+id/selectTime"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:layout_weight="1"
            android:background="#605F5F"
            android:gravity="center"
            android:textSize="16sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        tools:layout_marginTop="20dp">

        <TextView
            android:id="@+id/textView7"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="Set Date: " />

        <TextView
            android:id="@+id/selectDate"
            android:layout_width="230dp"
            android:layout_height="50dp"
            android:layout_marginEnd="32dp"
            android:background="#605F5F"
            android:gravity="center"
            android:textSize="16sp" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/frame_layout"
        android:layout_width="380dp"
        android:layout_height="202dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancelButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="50dp"
            android:text="Cancel" />

        <Button
            android:id="@+id/saveButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:enabled="false"
            android:text="Save" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>