<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="403dp"
        android:layout_height="75dp"
        android:gravity="center"
        android:text="Tasks"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/SortLocation"
            app:srcCompat="@drawable/baseline_location_on_24"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1" />

        <!-- add arrows to make it more visible that it's sorted-->

        <ImageView
            android:id="@+id/sortTime"
            app:srcCompat="@drawable/baseline_access_time_24"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_weight="1" />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvTasks"
        android:layout_width="377dp"
        android:layout_height="377dp"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:foregroundGravity="center" />

    <Button
        android:id="@+id/SetReminder"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:text="Create New Task" />
</LinearLayout>