...
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/nursenurse" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="395dp"
        android:layout_height="170dp"
        android:text="Nurses are the heart of healthcare!"
        android:textColor="@android:color/holo_orange_dark"
        android:textSize="37dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
...
