<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="Home"
        android:icon="@drawable/baseline_home_24"
        android:id="@+id/home"/>
    <item android:title="Calendar"
        android:icon="@drawable/baseline_calendar_today_24"
        android:id="@+id/calendar"/>
    <item android:title="Tasks"
        android:icon="@drawable/baseline_fact_check_24"
        android:id="@+id/tasks"/>
</menu>